multi-cluster/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: go-app-svc
  #namespace: go-app
  labels:
    app.kubernetes.io/name: go-app
spec:
  selector:
    app.kubernetes.io/name: go-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
