multi-cluster/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: go-app-ingress
    #namespace: go-app
spec:
  rules:
  - host: "app.digitalinfo.nl"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: go-app-svc
            port:
              number: 8080
